<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/blury_background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAppName"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawablePadding="6dp"
                android:text="@string/app_name"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_kleine_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvLetsRegister"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/let_s_register"
                android:textAlignment="center"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="@id/tvAppName"
                app:layout_constraintStart_toStartOf="@id/tvAppName"
                app:layout_constraintTop_toBottomOf="@id/tvAppName" />

            <TextView
                android:id="@+id/tvDoYouHaveAccount"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/do_you_have_an_account_log_in"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/tvLetsRegister"
                app:layout_constraintStart_toStartOf="@id/tvLetsRegister"
                app:layout_constraintTop_toBottomOf="@id/tvLetsRegister" />

            <EditText
                android:id="@+id/edFirstNameRegister"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                android:layout_marginTop="50dp"
                android:hint="@string/first_name"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/tvDoYouHaveAccount" />

            <EditText
                android:id="@+id/edLastNameRegister"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                android:layout_marginTop="10dp"
                android:hint="@string/last_name"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/edFirstNameRegister" />

            <EditText
                android:id="@+id/edEmailRegister"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/edLastNameRegister" />

            <EditText
                android:id="@+id/edPasswordRegister"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/edEmailRegister" />

            <io.writeopia.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/buttonRegisterRegister"
                style="@style/blueButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/mediumButtonHeight"
                android:layout_marginTop="15dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/edPasswordRegister"
                app:spinning_bar_color="@color/white" />

            <ImageView
                android:id="@+id/facebookRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:contentDescription="@string/facebook"
                android:src="@drawable/facebook_login"
                app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                app:layout_constraintBottom_toBottomOf="@id/facebookRegister"
                app:layout_constraintEnd_toEndOf="@id/facebookRegister"
                app:layout_constraintStart_toStartOf="@id/facebookRegister"
                app:layout_constraintTop_toTopOf="@id/facebookRegister" />


            <ImageView
                android:id="@+id/googleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:contentDescription="@string/facebook"
                android:src="@drawable/google_login"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google"
                app:layout_constraintBottom_toBottomOf="@id/googleRegister"
                app:layout_constraintEnd_toEndOf="@id/googleRegister"
                app:layout_constraintStart_toStartOf="@id/googleRegister"
                app:layout_constraintTop_toTopOf="@id/googleRegister" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRegisterLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.09" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRegisterRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>